fix(buttons): align to baseline

--- a/app/styles/blocks/btn.styl
+++ b/app/styles/blocks/btn.styl
@@ -1,5 +1,7 @@
 .btn
 	padding .8em 1em
+	vertical-align baseline
+
 	display inline-block
 
 
